fixed address entry

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ VITE_GOOGLE_MAPS_API_KEY=your_api_key_here
 
 # Optional: Server port (default 3001)
 PORT=3001
+
+# Optional: Restrict address autocomplete to a country (ISO 2-letter code, e.g. us, gb)
+# Leave empty to use browser locale. Frontend reads VITE_PLACES_COUNTRY.
+# VITE_PLACES_COUNTRY=us
