--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ VITE_GOOGLE_MAPS_API_KEY=your_api_key_here
 # Optional: Server port (default 3001)
 PORT=3001
 
+# Optional: Minimum collection interval in seconds (default 300 = 5 min). Reduces Directions API cost.
+# Collection never runs more often than this, even if the job is set to 1 min.
+# MIN_CYCLE_SECONDS=300
+
 # Optional: Restrict address autocomplete to a country (ISO 2-letter code, e.g. us, gb)
 # Leave empty to use browser locale. Frontend reads VITE_PLACES_COUNTRY.
 # VITE_PLACES_COUNTRY=us
