--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,9 @@ PORT=3001
 # Optional: Restrict address autocomplete to a country (ISO 2-letter code, e.g. us, gb)
 # Leave empty to use browser locale. Frontend reads VITE_PLACES_COUNTRY.
 # VITE_PLACES_COUNTRY=us
+
+# Optional: Require login to use the app. Set a password to enable auth; leave unset for no auth.
+# AUTH_PASSWORD=your_secret_password
+
+# Optional: Session signing secret (defaults to AUTH_PASSWORD if set). Use a long random string in production.
+# AUTH_SECRET=your_long_random_session_secret
