added google auth

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,14 @@ PORT=3001
 
 # Optional: Session signing secret (defaults to AUTH_PASSWORD if set). Use a long random string in production.
 # AUTH_SECRET=your_long_random_session_secret
+
+# Optional: Google Sign-In (OAuth 2.0). Create OAuth client at https://console.cloud.google.com/apis/credentials
+# Application type: Web application. Add authorized redirect URI: https://your-domain.com/api/auth/google/callback
+# (For local dev: http://localhost:3001/api/auth/google/callback)
+# GOOGLE_OAUTH_CLIENT_ID=your_oauth_client_id
+# GOOGLE_OAUTH_CLIENT_SECRET=your_oauth_client_secret
+
+# Optional: When frontend and backend are on different hosts (e.g. Vercel + Railway), set so OAuth redirect works.
+# BACKEND_URL=https://your-api.example.com
+# FRONTEND_URL=https://your-app.example.com
+# And in frontend build: VITE_API_URL=https://your-api.example.com
