--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,12 @@ VITE_GOOGLE_MAPS_API_KEY=your_api_key_here
 # Optional: Server port (default 3001)
 PORT=3001
 
+# Optional: Directory for SQLite DB (when DATABASE_URL is not set). Use a persistent volume path so data survives redeploys (e.g. DATA_DIR=/data).
+# DATA_DIR=/data
+
+# Optional: PostgreSQL connection URL. When set, the app uses PostgreSQL instead of SQLite (required on DigitalOcean App Platform for persistent users/routes).
+# DATABASE_URL=postgresql://user:password@host:port/database?sslmode=require
+
 # Optional: Minimum collection interval in seconds (default 300 = 5 min). Reduces Directions API cost.
 # Collection never runs more often than this, even if the job is set to 1 min.
 # MIN_CYCLE_SECONDS=300
